--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+alembic==1.0.8
 bcrypt==3.1.5
 blinker==1.4
 cffi==1.11.5
@@ -12,9 +13,13 @@ Flask-WTF==0.14.2
 gunicorn==19.9.0
 itsdangerous==0.24
 Jinja2==2.10
+Mako==1.0.8
 MarkupSafe==1.0
 Pillow==5.4.0
+psycopg2==2.7.7
 pycparser==2.19
+python-dateutil==2.8.0
+python-editor==1.0.4
 six==1.12.0
 SQLAlchemy==1.2.15
 Werkzeug==0.14.1
