--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ Flask-SQLAlchemy==2.3.2
 Flask-WTF==0.14.2
 gunicorn==19.9.0
 itsdangerous==0.24
-Jinja2==2.10
+Jinja2>=2.10.1
 Mako==1.0.8
 MarkupSafe==1.0
 Pillow==5.4.0
